--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Twenty One Pilots sz</title>
-    <h1>Somos Toppers (fã clube do top</h1>
+    <h1>Somos Toppers (fã clube do top)</h1>
 </head>
 <body>
     <div>
